# pingky

./: .gitignore  Cargo.toml  Makefile  README.md  build.rs  justfile  main.c
.cargo/: config.toml
app/: config.odin  main.odin  ui.odin
src/: config.rs  main.rs  ping.rs  task.rs  ui.rs
