[package]
name = "pingky"
version = "0.1.0"
edition = "2024"
build = "build.rs"

[profile.dev]
incremental = true
package = {"*" = {opt-level = 3}}

[profile.release]
lto = true
codegen-units = 1
opt-level = "s"

[dependencies]
fltk = { version = "1.5.22", features = ["fltk-bundled", "static-msvcrt"] }
rust-ini = "0.21.3"
thiserror = "2.0.17"

[build-dependencies]
