[package]
name = "pingky"
version = "0.1.0"
edition = "2024"
authors = ["Kian Heitkamp"]
build = "build.rs"

[package.metadata.winresource]


[profile.dev.package."*"]
opt-level = 3

[profile.release]
lto = true
strip = true
codegen-units = 1

[dependencies]
anyhow = "1.0.100"
directories = "6.0.0"
macroquad = "0.4.14"
msgbox = "0.7.0"
ping = "0.7.0"
serde = { version = "1.0.228", features = ["derive"] }
toml = { version = "0.9.8", features = ["serde"] }

[build-dependencies]
winresource = "0.1.28"
static_vcruntime = "3.0.0"
