[package]
name = "pingky"
version = "0.1.0"
edition = "2024"
build = "build.rs"

[profile.release]
lto = true
strip = true
codegen-units = 1
opt-level = "s"

[dependencies]
fltk = { version = "1.5.23", features = ["fltk-bundled", "static-msvcrt"] }
fltk-table = "0.3.5"
fltk-theme = "0.7.9"

[build-dependencies]
static_vcruntime = "3.0.0"
winres = "0.1.12"
